<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.livecv.ui.whoiam.WhoIamFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_whoiam" />

    <fragment
        android:id="@+id/nav_edu"
        android:name="com.example.livecv.ui.education.EducationFragment"
        android:label="@string/menu_education"
        tools:layout="@layout/fragment_education" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.livecv.ui.projects.ProjectsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.livecv.ui.appabout.AppAboutFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_aboutapp" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.livecv.ui.hobbies.HobbiesFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_hobbies" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.livecv.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.livecv.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

</navigation>